--- a/AluraBooks/style.css
+++ b/AluraBooks/style.css
@@ -1,11 +1,16 @@
 @import url("styles/header.css");
+@import url("styles/banner.css");
 
 :root {
    --cor-de-fundo:  #ebecee;
    --branco: #FFFFFF; 
+   --laranja:  #EB9800;
+   --fonte-principal: "Poppins"; 
 }
 
 body {
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
-
