--- a/AluraBooks/style.css
+++ b/AluraBooks/style.css
@@ -1,11 +1,12 @@
 @import url("styles/header.css");
 @import url("styles/banner.css");
-
+@import url("styles/carrossel.css");
 :root {
    --cor-de-fundo:  #ebecee;
    --branco: #FFFFFF; 
    --laranja:  #EB9800;
    --fonte-principal: "Poppins"; 
+   --azul: #002F52;
 }
 
 body {
