--- a/AluraBooks/styles/banner.css
+++ b/AluraBooks/styles/banner.css
@@ -30,6 +30,6 @@
     font-weight: 400;
     text-align: center;
     color: var(--branco);
-    background: url("../img/31179.svg") no-repeat;
+    background: url("../img/Vector.svg") no-repeat;
     background-position: 1em;
 }
